@@ -127,6 +127,16 @@
 	      </p>
 
 	    
+<dt>NSLanguages
+<dd>
+              <p>
+
+              An array of strings that lists the users prefered languages,
+              in order or preference. If not found the default is just 
+              English.
+              </p>
+
+	    
 </dl>
 <h4><a name ="cont-4">Environment variables</a></h4>
 <p>
